package binarySearchTree;

public enum PrintVariant {
    INORDER, POSTORDER, PREORDER
}
