package binarySearchTree;

// this interface exists so that we can use it in the binary search tree interface
public interface NodeI {
}
