@startuml

title __BINARYSEARCHTREE's Class Diagram__\n

  package binarySearchTree {
    class BinarySearchTreeArrayEmbedding {
        - nodes : NodeArrayEmbedding[]
        - size : int
        + BinarySearchTreeArrayEmbedding()
        + addData()
        + printTree()
        + updateSum()
        + getSum()
    }
  }
  

  package binarySearchTree {
    interface BinarySearchTreeI {
        {abstract} + addData()
        {abstract} + printTree()
        {abstract} + updateSum()
        {abstract} + getSum()
    }
  }
  

  package binarySearchTree {
    class BinarySearchTreeNodeLinking {
        + addData()
        + printTree()
        + updateSum()
        + getSum()
    }
  }
  

  package binarySearchTree {
    class NodeArrayEmbedding {
        - data : Integer
        - key : int
        - pos : int
        - sum : int
        - bSum : int
        - nodes : NodeArrayEmbedding[]
        + NodeArrayEmbedding()
        + NodeArrayEmbedding()
        + equals()
        + compareTo()
        + insert()
        + printData()
        + getData()
        + getKey()
        + getLeft()
        + getRight()
        + getFather()
        + setPos()
        + getSum()
        + setSum()
        + updateSum()
        + updatebSum()
        + getSmallerFatherSum()
        + findClosest()
        + getbSum()
        + setbSum()
    }
  }
  

  package binarySearchTree {
    interface NodeI {
    }
  }
  

  package binarySearchTree {
    class NodeNodeLinking {
        - data : Integer
        - key : int
        - sum : long
        - bSum : long
        + NodeNodeLinking()
        + equals()
        + compareTo()
        + exist()
        + insert()
        + printData()
        + getData()
        + getKey()
        + getLeft()
        + setLeft()
        + getRight()
        + setRight()
        + getFather()
        + setFather()
        + getSum()
        + setSum()
        + updateSum()
        + updatebSum()
        + getSmallerFatherSum()
        + findClosest()
        + getbSum()
        + setbSum()
    }
  }
  

  package binarySearchTree {
    enum PrintVariant {
      INORDER
      POSTORDER
      PREORDER
    }
  }
  

  BinarySearchTreeArrayEmbedding -up-|> BinarySearchTreeI
  BinarySearchTreeNodeLinking -up-|> BinarySearchTreeI
  BinarySearchTreeNodeLinking o-- NodeNodeLinking : root
  NodeArrayEmbedding -up-|> Comparable
  NodeArrayEmbedding -up-|> NodeI
  NodeNodeLinking -up-|> Comparable
  NodeNodeLinking -up-|> NodeI
  NodeNodeLinking o-- NodeNodeLinking : left
  NodeNodeLinking o-- NodeNodeLinking : right
  NodeNodeLinking o-- NodeNodeLinking : father


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
